# aoc

py/: README.md  pyproject.toml
py/aoc/: day01.py  main.py
rust/src/: main.rs
