[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Sammi Johnson <sambjohnson94@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
script = "aoc.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
